# KNU

./: ColumnHeader.qml  README.md  RowHeader.qml  calculator.cpp  myscriptobject.cpp
2 course/: h
OOP/lab1/: lab1.2.cpp  lab1.2.h
OOP/lab1/lab1.1/: Header.h  lab1.1.h  lab1.cpp
OOP/lab1/lab1.2/: lab1.2.cpp
OOP/lab2/: CMakeLists.txt  ClassDiagram.puml  Help.qml  MainHeader.qml  SequenceDiagram.puml  Timer_Alarm.sln  exceltable.h  main.cpp  main.qml  myscriptobject.h  qml.qrc
OOP/lab2/Timer_Alarm/: Alarm.cs  AlarmPanel.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Program.cs  Timer_Alarm.csproj
OOP/lab2/Timer_Alarm/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
OOP/project/: AndroidManifest.xml  Info.qml  MainTable.qml  Menu.qml  UserCaseDiagram.puml  calculator.h  exceltable.cpp  filemanager.cpp  filemanager.h
OOP/project/drawable/: button_gamelevels.xml  button_stroke_black_press_white.xml  button_stroke_white_press_purple.xml  style_btn_black.xml  style_btn_white.xml  style_btn_white_purple_press.xml  style_img_universal.xml  style_points.xml  style_points_green.xml
OOP/project/java/: Array.java  GameLevels.java  Level1.java  Level2.java  MainActivity.java
OOP/project/layout/: activity_main.xml  dialogend.xml  gamelevels.xml  previewdialog.xml  universal.xml
OOP/project/values/: colors.xml  descriptionlevels.xml  strings.xml  textforlevels.xml
Semester5/Distributed computing/2.2/: Base.java  Main.java  Man2.java  Man3.java
Semester5/Distributed computing/lab1.1/: Main.java
Semester5/Distributed computing/lab1.2/: JSemaphore.java  Main.java
Semester5/Distributed computing/lab2.1/: Bag.java  Bear.java  Bee.java  Field.java  Main.java
Semester5/Distributed computing/lab2.2/: Base.java  Main.java  Man1.java  Truck.java
Semester5/Distributed computing/lab2.3/: lab2_3.go
Semester5/Distributed computing/modul1/: Main.java  main.go
Semester5/Numerical Methods/lab1/: Newton.java
Semester5/Ruby/Module1/: task1.rb  task2.rb
Semester5/Ruby/lab1/: lab1.rb
Semester5/Ruby/lab2/: lab2.rb
Semester5/Ruby/lab3/: lab3_1.rb  lab3_2.rb  lab3_3.rb  lab3_4.rb
Semester5/Ruby/lab4/: lab4_1.rb  lab4_2.rb  lab4_3.rb
Semester5/Ruby/lab5/: lab5_1.rb  lab5_2.rb
Semester5/Ruby/lab6/: lab6.rb
Semester5/Ruby/zalik/: task6
Semester6/maple13/: lab1.2.mw
Semester6/maple13/lab1/: lab1.1.mw
Semester6/maple13/lab2/: lab2.mw
Semester6/maple13/lab3/: lab3.mw
